# nwm

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
src/: API.cpp  API.h  Atoms.cpp  Atoms.h  CMakeLists.txt  Client.cpp  Client.h  ClientGroup.cpp  ClientGroup.h  Commands.cpp  Commands.h  Graphics.cpp  Graphics.h  GridLayout.cpp  GridLayout.h  Handlers.cpp  Handlers.h  JavaScript.cpp  JavaScript.h  Keybinding.cpp  Keybinding.h  Keybindings.cpp  Keybindings.h  Layout.cpp  Layout.h  Rect.h  ScriptEngine.cpp  ScriptEngine.h  StackLayout.cpp  StackLayout.h  Types.h  Util.cpp  Util.h  WindowManager.cpp  WindowManager.h  Workspace.cpp  Workspace.h  builtins.js  main.cpp  nwm-config.h.in  (+5 more)
